images are aligned, div is fixed

--- a/landingPage.css
+++ b/landingPage.css
@@ -66,7 +66,8 @@ ul {
     display: flex;
     align-items: center;
     justify-content: center;
-    
+    flex-direction: column;
+    flex-wrap: nowrap;
 }
 
 .first{
@@ -115,33 +116,31 @@ ul {
     align-items: center;
     text-align: center;
     background-color: black;
-    height: fit-content;
-    position: relative;
     background-color: rgba(0, 0, 0, 0.63);
 
 }
 
 .boxText{
+    
     display: flex;
-    flex-wrap: wrap;
-    margin:1em;
-    align-content: center; 
-    justify-content: center;
+    
     color:rgb(217, 174, 138);
     font-family: "book";
     font-weight: 600;
     font-size: 40px;
     gap: 6px;
     text-shadow: rgb(0, 0, 0)1px 0px 10px ;
-    padding: 20px 70px;
+    
 }
 .writtenContainer {
-    flex-wrap: wrap;
-    flex-flow: columns;
-    flex-direction: columns;
+    margin-top: 10em;
+text-align: center;
+justify-content: center;
+    background-color: blue;
 }
 .Boxsubtext {
-    text-align: center;
+
+    text-align: center ;
     font-family:"skinny";
     word-spacing: 5px;
     letter-spacing: 1px;
@@ -149,6 +148,8 @@ ul {
     font-stretch:50px;
     font-size:20px;
     color: rgb(228, 218, 196);
+    padding: 1px;
+
 }
 
 
@@ -157,6 +158,11 @@ ul {
 display: flex;
 align-items: center;
 justify-content: center;
+position: relative;
+width:100%;
+align-items: center;
+justify-content: center;
+
 }
 .backImage {
     padding-right: 4em;
@@ -164,21 +170,22 @@ justify-content: center;
     align-items: center;
     text-align: center;
     background-color: rgba(197, 67, 67, 0.63);
-min-width: none;
+    max-width: 100%;
 }
 
 .images{
 
     display: flex;
-    height: 1%;
-    width: 1%;
-    aspect-ratio:1/2;
+    justify-content: space-evenly;
+    gap: 50px;
+    height: 15%;
+    width: 15%;
+    aspect-ratio:3/2;
     object-fit:contain;
 }
 /*the footer etc*/
 .footer {
-    position: relative;
-    width: 100%;
+    position: relative;  
     background-color: rgba(0, 0, 0, 0.63);
     display: flex;
     flex-direction: row;
